--- a/index.html
+++ b/index.html
@@ -2,40 +2,73 @@
 
 <head>
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body>
+<body id="body">
     <div class="images">
-        <div class="cont">ExamHub helps students to crack all competetive exams with ease<br>
-            <button type="button" class="btn btn-secondary">Get started</button>
+        <div class="cont"><b>ExamHub</b> helps students to crack all competetive exams with ease<br>
+            <p style="font-size: 1vw;"> C O M I N G &nbsp;&nbsp; S O O N ....</p>
+            <div class="row">
+            <div class="col-sm-8 align-items-center" style="margin-top: auto;">
+                <input type="text" style="padding: 20;" name="email" class="form-control"
+                    placeholder="Enter your email id ">
+            </div>
+            <div class="col-sm-4 align-items-center" style="margin-top: auto;">
+                <button type="button search-bar" class="btn btn-secondary btn-lg"
+                    >SUBSCRIBE</button>
+            </div>
         </div>
-    
-    <div class="container" style="margin-top: 24%;">
-        <div class="row  justify-content-md-center">
-            <div class="card w-75">
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Button</a>
+        </div>
+
+        <div class="container" style="margin-top: 25%;">
+            <div class="row justify-content-center txt">
+                <div class="col-lg-4">
+                    <div class="card " style="width: 18rem; background: grey; color: white; opacity: 0.5;">
+                        <div class="card-body" >
+                            <h5 class="card-title">Feature - 1</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem; background: grey; color: white; opacity: 0.5;">
+                        <div class="card-body">
+                            <h5 class="card-title">Feature - 2</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div class="card" style="width: 18rem; background: grey; color: white; opacity: 0.5;">
+                        <div class="card-body">
+                            <h5 class="card-title">Feature - 2</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+            integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
 </body>
 
 
