--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
+
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Rajdhani:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&family=Rajdhani&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -11,7 +15,7 @@
 <body id="body">
     <div class="images">
         <div class="cont"><b>ExamHub</b> helps students to crack all competetive exams with ease<br>
-            <p style="font-size: 1vw;"> C O M I N G &nbsp;&nbsp; S O O N ....</p>
+            <p style="font-size: 1vw;"> &nbsp;&nbsp; C O M I N G &nbsp;&nbsp; S O O N ....</p>
             <div class="row">
             <div class="col-sm-8 align-items-center" style="margin-top: auto;">
                 <input type="text" style="padding: 20;" name="email" class="form-control"
